# fromLogicGatesToAnssemble

./: .gitignore  README.md
01/: And.hdl  DMux.hdl  DMux4Way.hdl  Mux.hdl  Mux8Way16.hdl  Not16.hdl  Or.hdl  Or8Way.hdl
01_BooleanLogic(Gates)/: DMux8Way.hdl  Mux4Way16.hdl  Not.hdl  Xor.hdl
02_BooleanArithmetic(ALU)/: ALU.hdl  Add16.hdl  FullAdder.hdl  Inc16.hdl
03_SequentialLogic(RAM)/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
03_SequentialLogic(RAM)/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04_MachineLanguageProgramming/fill/: Fill.asm
04_MachineLanguageProgramming/mult/: mult.asm
05_CPU+Memory=Computer/: CPU.hdl  Computer.hdl  Memory.hdl
06_Assembler/Assembler/: CMakeLists.txt  Code.c  Code.h  HellpeingFunctions.c  HellpeingFunctions.h  HellperMethods.c  HellperMethods.h  Parser.c  Parser.h  SymbolTable.c  SymbolTable.h  main.c
06_Assembler/Assembler/HashTable/: HashTable.c
07_VM_Stack_Arithmetic_P1/VM_Translator/: .gitignore  CMakeLists.txt  CodeWriter.c  CodeWriter.h  HellpeingFunctions.c  HellpeingFunctions.h  Parser.c  Parser.h  SymbolTable.c  SymbolTable.h  main.c
07_VM_Stack_Arithmetic_P1/VM_Translator/HashTable/: HashTable.h
07_VM_Stack_Arithmetic_P1/VM_Translator/VM_Languange/: Arithmetic_Logical_Commands.c  Arithmetic_Logical_Commands.h  Branching_Commands.c  Branching_Commands.h  Function_Commands.c  Function_Commands.h  Memory_Access_Comands.c  Memory_Access_Comands.h
08_Compiler/Compiler/: CMakeLists.txt  HellpingFunctions.c  HellpingFunctions.h  main.c
08_Compiler/Compiler/DataStructure/: HashTable.c  LinkedList.c  LinkedList.h  List.c  List.h
08_Compiler/Compiler/SyntaxAnalyzer/LexycalAnalysis/: TokenCode.c  TokenCode.h  Token_Parser.c  Token_Parser.h  Tokenizer.c  Tokenizer.h  Tokens_Table.c  Tokens_Table.h
08_Compiler/Compiler/SyntaxAnalyzer/Parser/: CompilationEngine.c  CompilationEngine.h
